src/shared/lib/oql/oql-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function() { return false; },
      peg$c1 = /^[0-9]/,
      peg$c2 = peg$classExpectation([["0", "9"]], false, false),
      peg$c3 = function(number) { return number.join("");},
      peg$c4 = "-",
      peg$c5 = peg$literalExpectation("-", false),
      peg$c6 = function(number) { return "-"+number;},
      peg$c7 = ".",
      peg$c8 = peg$literalExpectation(".", false),
      peg$c9 = function(whole_part, decimal_part) { return whole_part + "." + decimal_part;},
      peg$c10 = function(decimal_part) { return "."+decimal_part;},
      peg$c11 = function(whole_part) {return whole_part;},
      peg$c12 = /^[\-_.@\/a-zA-Z0-9*]/,
      peg$c13 = peg$classExpectation(["-", "_", ".", "@", "/", ["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false),
      peg$c14 = function(word) { return word.join("") },
      peg$c15 = /^[\-.\/a-zA-Z0-9*]/,
      peg$c16 = peg$classExpectation(["-", ".", "/", ["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false),
      peg$c17 = /^[GPAVLIMCFYWHKRQNEDST]/,
      peg$c18 = peg$classExpectation(["G", "P", "A", "V", "L", "I", "M", "C", "F", "Y", "W", "H", "K", "R", "Q", "N", "E", "D", "S", "T"], false, false),
      peg$c19 = function(letter) { return letter; },
      peg$c20 = /^[^"]/,
      peg$c21 = peg$classExpectation(["\""], true, false),
      peg$c22 = function(stringExceptQuotes) { return stringExceptQuotes.join("") },
      peg$c23 = /^[ \t\r]/,
      peg$c24 = peg$classExpectation([" ", "\t", "\r"], false, false),
      peg$c25 = /^[; \t\r\n]/,
      peg$c26 = peg$classExpectation([";", " ", "\t", "\r", "\n"], false, false),
      peg$c27 = "[",
      peg$c28 = peg$literalExpectation("[", false),
      peg$c29 = "\"",
      peg$c30 = peg$literalExpectation("\"", false),
      peg$c31 = function(label) {return {"label": label, "list":[]};},
      peg$c32 = function() {return {"label": undefined, "list":[]};},
      peg$c33 = "amp",
      peg$c34 = peg$literalExpectation("AMP", true),
      peg$c35 = "homdel",
      peg$c36 = peg$literalExpectation("HOMDEL", true),
      peg$c37 = "gain",
      peg$c38 = peg$literalExpectation("GAIN", true),
      peg$c39 = "hetloss",
      peg$c40 = peg$literalExpectation("HETLOSS", true),
      peg$c41 = "mut",
      peg$c42 = peg$literalExpectation("MUT", true),
      peg$c43 = "exp",
      peg$c44 = peg$literalExpectation("EXP", true),
      peg$c45 = "prot",
      peg$c46 = peg$literalExpectation("PROT", true),
      peg$c47 = function(mqr, sqr) {return mqr.concat(sqr);},
      peg$c48 = function(qr, sqr) {return qr.concat(sqr);},
      peg$c49 = function(mqr) {return mqr;},
      peg$c50 = function(qr) {return qr; },
      peg$c51 = "]",
      peg$c52 = peg$literalExpectation("]", false),
      peg$c53 = function(mergedGenes, qr, mqr) { mergedGenes.list = qr; return [mergedGenes].concat(mqr);; },
      peg$c54 = function(mergedGenes, qr) { mergedGenes.list = qr; return [mergedGenes]; },
      peg$c55 = function(first, rest) { return [first].concat(rest); },
      peg$c56 = function(first) { return [first]; },
      peg$c57 = ":",
      peg$c58 = peg$literalExpectation(":", false),
      peg$c59 = function(geneName, alts) { return {"gene": geneName, "alterations": alts}; },
      peg$c60 = function(geneName) { return {"gene": geneName, "alterations":false}; },
      peg$c61 = function(a1, a2) { return [a1].concat(a2);},
      peg$c62 = function(a1) { return [a1]; },
      peg$c63 = function(cmd) { return cmd; },
      peg$c64 = function() { return "AMP"; },
      peg$c65 = function() { return "HOMDEL"; },
      peg$c66 = function() { return "GAIN"; },
      peg$c67 = function() { return "HETLOSS"; },
      peg$c68 = "cna",
      peg$c69 = peg$literalExpectation("CNA", true),
      peg$c70 = function(op, constrval) { return {"alteration_type":"cna", "constr_rel":op, "constr_val":constrval}; },
      peg$c71 = function(constrval) { return {"alteration_type":"cna", "constr_rel":"=", "constr_val":constrval}; },
      peg$c72 = "MUT",
      peg$c73 = peg$literalExpectation("MUT", false),
      peg$c74 = "=",
      peg$c75 = peg$literalExpectation("=", false),
      peg$c76 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers}; },
      peg$c77 = "!=",
      peg$c78 = peg$literalExpectation("!=", false),
      peg$c79 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "!=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers}; },
      peg$c80 = function(modifiers) { return {"alteration_type":"mut", "info":{}, "modifiers":modifiers}; },
      peg$c81 = function() { return {"alteration_type":"mut", "info":{}, "modifiers":[]}; },
      peg$c82 = function(mutation) {
      	        if (mutation.type) {
      	            return {"alteration_type":"mut", "constr_rel": "=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers};
                  } else {
                      return {"alteration_type":"mut", "info":{}, "modifiers": mutation.modifiers};
                  }
              },
      peg$c83 = "EXP",
      peg$c84 = peg$literalExpectation("EXP", false),
      peg$c85 = function(op, constrval) { return {"alteration_type":"exp", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
      peg$c86 = "FUSION",
      peg$c87 = peg$literalExpectation("FUSION", false),
      peg$c88 = function() { return {"alteration_type":"fusion"}; },
      peg$c89 = "PROT",
      peg$c90 = peg$literalExpectation("PROT", false),
      peg$c91 = function(op, constrval) { return {"alteration_type":"prot", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
      peg$c92 = ">=",
      peg$c93 = peg$literalExpectation(">=", false),
      peg$c94 = function() { return ">="; },
      peg$c95 = "<=",
      peg$c96 = peg$literalExpectation("<=", false),
      peg$c97 = function() { return "<="; },
      peg$c98 = ">",
      peg$c99 = peg$literalExpectation(">", false),
      peg$c100 = function() { return ">"; },
      peg$c101 = "<",
      peg$c102 = peg$literalExpectation("<", false),
      peg$c103 = function() { return "<"; },
      peg$c104 = function(modifiersThenMaybeMutation) { return modifiersThenMaybeMutation; },
      peg$c105 = "_",
      peg$c106 = peg$literalExpectation("_", false),
      peg$c107 = function(mutation, modifiers) { mutation.modifiers = modifiers; return mutation; },
      peg$c108 = function(mutation) { mutation.modifiers = []; return mutation; },
      peg$c109 = function(modifier, modifiersThenMaybeMutation) { modifiersThenMaybeMutation.modifiers.unshift(modifier); return modifiersThenMaybeMutation; },
      peg$c110 = function(modifier, mutation) { mutation.modifiers = [modifier]; return mutation; },
      peg$c111 = function(modifier) { return { modifiers: [modifier] }; },
      peg$c112 = function(modifier, more) { return [modifier].concat(more); },
      peg$c113 = function(modifier) { return [modifier]; },
      peg$c114 = "missense",
      peg$c115 = peg$literalExpectation("MISSENSE", true),
      peg$c116 = function() { return {"type":"class", "value":"MISSENSE", "info":{}}; },
      peg$c117 = "nonsense",
      peg$c118 = peg$literalExpectation("NONSENSE", true),
      peg$c119 = function() { return {"type":"class", "value":"NONSENSE", "info":{}}; },
      peg$c120 = "nonstart",
      peg$c121 = peg$literalExpectation("NONSTART", true),
      peg$c122 = function() { return {"type":"class", "value":"NONSTART", "info":{}}; },
      peg$c123 = "nonstop",
      peg$c124 = peg$literalExpectation("NONSTOP", true),
      peg$c125 = function() { return {"type":"class", "value":"NONSTOP", "info":{}}; },
      peg$c126 = "frameshift",
      peg$c127 = peg$literalExpectation("FRAMESHIFT", true),
      peg$c128 = function() { return {"type":"class", "value":"FRAMESHIFT", "info":{}}; },
      peg$c129 = "inframe",
      peg$c130 = peg$literalExpectation("INFRAME", true),
      peg$c131 = function() { return {"type":"class", "value":"INFRAME", "info":{}}; },
      peg$c132 = "splice",
      peg$c133 = peg$literalExpectation("SPLICE", true),
      peg$c134 = function() { return {"type":"class", "value":"SPLICE", "info":{}}; },
      peg$c135 = "trunc",
      peg$c136 = peg$literalExpectation("TRUNC", true),
      peg$c137 = function() { return {"type":"class", "value":"TRUNC", "info":{}}; },
      peg$c138 = "promoter",
      peg$c139 = peg$literalExpectation("PROMOTER", true),
      peg$c140 = function() { return {"type":"class", "value":"PROMOTER", "info":{}}; },
      peg$c141 = function(letter, position, string) { return {"type":"name" , "value":(letter+position+string), "info":{}};},
      peg$c142 = function(letter, position) { return {"type":"position", "value":parseInt(position), "info":{"amino_acid":letter.toUpperCase()}}; },
      peg$c143 = function(mutation_name) { return {"type":"name", "value":mutation_name, "info":{"unrecognized":true}}; },
      peg$c144 = "germline",
      peg$c145 = peg$literalExpectation("GERMLINE", true),
      peg$c146 = function() { return "GERMLINE";},
      peg$c147 = "somatic",
      peg$c148 = peg$literalExpectation("SOMATIC", true),
      peg$c149 = function() { return "SOMATIC";},
      peg$c150 = "driver",
      peg$c151 = peg$literalExpectation("DRIVER", true),
      peg$c152 = function() { return "DRIVER";},

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$parseQuery();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsesp();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseNaturalNumber() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c1.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c3(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNumber() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 45) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNumber();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseNaturalNumber();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s2 = peg$c7;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNaturalNumber();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 46) {
          s1 = peg$c7;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseNaturalNumber();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseNaturalNumber();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c11(s1);
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parseString() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c12.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c12.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseProteinChangeCode() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c15.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c15.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseAminoAcid() {
    var s0, s1;

    s0 = peg$currPos;
    if (peg$c17.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c19(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseStringExceptQuotes() {
    var s0, s1, s2;
